# CortexNet

./: .gitignore  .pre-commit-config.yaml  ARCHITECTURE.md  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  MODULE_MAP.md  Makefile  README.md  RELEASE.md  SECURITY.md  SUPPORT.md  pyproject.toml
.codex/: PROJECT_CONTEXT.md
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml  codeql.yml  publish.yml  publish_hf.yml
.openclaw/: openclaw_task_prompt.md  optimization_report.json
.opencode/: opencode.db-shm  opencode.db-wal
cortexnet/: __init__.py  __main__.py  adversarial.py  attention.py  blocks.py  cache.py  causal_reasoning.py  compat.py  config.py  continual_learning.py  cortex_block_lite.py  distributed.py  graph_reasoning.py  hierarchical_memory.py  interpretability.py  memory.py  meta_learning.py  model.py  multi_agent.py  multimodal.py  pretrained_utils.py  quantization.py  routing.py  self_evolution.py  ssm.py  training_utils.py  transformer_baseline.py
cortexnet/adapter/: __init__.py  arch_adapter.py  calibrator.py  inference_adapter.py  model_registry.py  weight_adapter.py
cortexnet/ops/: __init__.py  device_manager.py  npu_ops.py  ssm_ops.py
deploy/hf_space/: README.md  app.py  requirements.txt
docs/: README.md
docs/en/: ADAPTATION_AND_COMPATIBILITY.md  API_REFERENCE.md  ARCHITECTURE_BOOK.md  ARCHITECTURE_VISUAL.md  BENCHMARKING_AND_EVALUATION.md  FAQ.md  HF_PUBLISHING.md  OPEN_SOURCE_GUIDE.md  QUICKSTART_AND_USAGE.md  ROADMAP.md  TRAINING_AND_DEPLOYMENT.md  WHITEPAPER.md
docs/reports/: README.md  v3.2.4_smoke.md  v3.2.5_smoke.md
docs/zh-CN/: ADAPTATION_AND_COMPATIBILITY.md  API_REFERENCE.md  ARCHITECTURE_BOOK.md  ARCHITECTURE_VISUAL.md  FAQ.md  (+7 more)
examples/: README.md  from_pretrained_migration.py  minimal_infer.py  train_tiny.py
tests/: __init__.py  test_all.py  test_core_modules.py  test_engineering_guards.py  test_public_api.py
(+15 files in other folders)
