[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cortexnet"
version = "3.2.1"
description = "CortexNet: unified neural network architecture beyond Transformers"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.9"
authors = [
    {name = "CortexNet Team"},
]
keywords = ["deep-learning", "llm", "state-space-model", "sparse-attention", "pytorch"]
urls = {Homepage = "https://github.com/chaojixiaokeai/CortexNet", Repository = "https://github.com/chaojixiaokeai/CortexNet", Issues = "https://github.com/chaojixiaokeai/CortexNet/issues", Changelog = "https://github.com/chaojixiaokeai/CortexNet/blob/main/CHANGELOG.md"}
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "torch>=2.0.0",
    "numpy>=1.21.0",
]

[project.optional-dependencies]
tokenizer = ["tokenizers>=0.13.0"]
full = [
    "tokenizers>=0.13.0",
    "safetensors>=0.3.0",
    "tqdm>=4.60.0",
]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ruff>=0.1.0",
    "pyflakes>=3.2.0",
    "build>=1.0.0",
    "twine>=5.0.0",
]
distributed = [
    "deepspeed>=0.10.0",
]

[project.scripts]
cortexnet = "cortexnet.__main__:main"

[tool.setuptools.packages.find]
include = ["cortexnet*"]
exclude = ["tests*", "scripts*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_functions = "test_*"

[tool.ruff]
target-version = "py39"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E402", "E501", "I001", "W293"]
